--- a/prototype-glfw/src/Common/CMakeLists.txt
+++ b/prototype-glfw/src/Common/CMakeLists.txt
@@ -12,3 +12,6 @@ set(COMMON_ATMOSPHERE_SRC ${COMMON_ATMOSPHERE_SRC} PARENT_SCOPE)
 
 add_subdirectory(TreeGeom)
 set(COMMON_TREEGEOM_SRC ${COMMON_TREEGEOM_SRC} PARENT_SCOPE)
+
+add_subdirectory(Cloud)
+set(COMMON_CLOUD_SRC ${COMMON_CLOUD_SRC} PARENT_SCOPE)
