--- a/prototype-glfw/src/Targets/BasicWindow/CMakeLists.txt
+++ b/prototype-glfw/src/Targets/BasicWindow/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(BasicWindow
 				${COMMON_TERRAIN_SRC}
 				${COMMON_OCEAN_SRC}
 				${COMMON_ATMOSPHERE_SRC}
-				${COMMON_TREEGEOM_SRC})
+				${COMMON_TREEGEOM_SRC}
+				${COMMON_CLOUD_SRC})
 
 message(STATUS "HEYHO ${COMMON_ATMOSPHERE_SRC}")
 
